--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^18.2.0",
     "react-css-modules": "^4.7.11",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.2"
   },
   "devDependencies": {
