--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   },
   "license": "ISC",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.2",
     "firebase": "^9.15.0",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-css-modules": "^4.7.11",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
