--- a/package.json
+++ b/package.json
@@ -4,20 +4,18 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --mode development --hot --open",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "eslintInit": "eslint --init",
+    "lint": "eslint src/*.js"
   },
   "license": "ISC",
   "dependencies": {
-    "@reduxjs/toolkit": "^1.9.2",
     "firebase": "^9.15.0",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-css-modules": "^4.7.11",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.0.5",
-    "react-router-dom": "^6.6.2",
-    "react-slick": "^0.29.0",
-    "slick-carousel": "^1.8.1"
+    "react-router-dom": "^6.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
@@ -25,6 +23,8 @@
     "@babel/preset-react": "^7.18.6",
     "babel-loader": "^9.1.2",
     "css-loader": "^6.7.3",
+    "eslint": "^8.35.0",
+    "eslint-plugin-react": "^7.32.2",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.7.2",
