--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,9 @@
     },
     "extends": [
         "eslint:recommended",
-        "plugin:react/recommended"
+        "plugin:react/recommended",
+        "prettier",
+        "plugin:prettier/recommended"
     ],
     "overrides": [
     ],
@@ -18,6 +20,15 @@
     ],
     "rules": {
         "react/react-in-jsx-scope": "off",
-        "react/prop-types": 0
+        "react/prop-types": 0,
+        "prettier/prettier": [
+            "warn",
+            {
+                "endOfLine": "auto"
+            }
+        ],
+        "no-unused-expressions": "off",
+        "no-unused-vars": "off",
+        "no-func-assign": "off"
     }
 }
