--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "firebase": "^9.15.0",
     "prettier": "^2.8.4",
+    "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-css-modules": "^4.7.11",
