--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-css-modules": "^4.7.11",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.6.2"
+    "react-router-dom": "^6.6.2",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
